--- a/src/keepass2android-appSdkStyle/Resources/layout/open_db_selection.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/open_db_selection.xml
@@ -9,13 +9,11 @@
               android:gravity="center_horizontal">
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/mytoolbar"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:titleTextStyle="@style/MyTitleTextStyle"
     android:layout_height="wrap_content"
     android:layout_width="fill_parent"
-    android:minHeight="?attr/actionBarSize"
-    android:background="#00000000" />
+    app:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.Material3.Light"
+    android:minHeight="?attr/actionBarSize" /> 
   <GridView
     android:id="@+id/gridview"
     android:layout_width="fill_parent"
