--- a/src/keepass2android-appSdkStyle/Resources/layout/password.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/password.xml
@@ -9,8 +9,7 @@
     <keepass2android.MeasuringRelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/relative_layout"
-        android:background="@color/bgColorLight">
+        android:id="@+id/relative_layout">
         <LinearLayout
             android:id="@+id/top"
             android:layout_width="match_parent"
@@ -21,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:background="@color/md_theme_secondaryContainer"
             android:layout_alignParentBottom="true"
             android:baselineAligned="false">
             <Button
@@ -44,59 +44,42 @@
             android:layout_height="1dp"
             android:layout_above="@id/bottom_bar"
             android:background="#b8b8b8" />
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:id="@+id/main_content"
+        
+        <androidx.coordinatorlayout.widget.CoordinatorLayout 
+                                                             android:id="@+id/main_content"
+                                                             android:layout_width="match_parent"
+                                                             android:layout_height="match_parent">
+
+          <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/divider2"
-            android:layout_below="@id/top"
-            android:fitsSystemWindows="true">
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appbar"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/detail_backdrop_height"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                android:fitsSystemWindows="true">
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    android:id="@+id/collapsing_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                    android:fitsSystemWindows="true"
-                    app:contentScrim="?attr/colorAccent"
-                    app:expandedTitleMarginStart="16dp"
-                    app:expandedTitleMarginEnd="24dp"
-                    app:expandedTitleMarginBottom="20sp">
-                    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
-                        android:layout_width="fill_parent"
-                        android:fitsSystemWindows="true"
-                        android:layout_height="fill_parent">
-                        <ImageView
-                            android:id="@+id/backdrop"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            android:fitsSystemWindows="true"
-                            android:src="@drawable/toolbar_bg"
-                            app:layout_collapseMode="parallax" />
-                        <TextView
-                            android:id="@+id/filename"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_marginBottom="4sp"
-                            android:layout_marginLeft="16dp"
-                            android:textSize="10sp"
-                            android:text="/storage/emulated/0/keepass/keepass/database.kdbx" />
-                    </RelativeLayout>
-                    <androidx.appcompat.widget.Toolbar
-                        android:id="@+id/mytoolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                        app:titleTextStyle="@style/MyTitleTextStyle"
-                        app:layout_collapseMode="pin" />
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
+            android:layout_height="256dp"
+            android:fitsSystemWindows="true"
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
+
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+              android:id="@+id/collapsing_toolbar"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              app:expandedTitleMarginEnd="64dp"
+              app:expandedTitleMarginStart="48dp"
+              app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                <ImageView
+                  android:id="@+id/backdrop"
+                  android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:scaleType="centerCrop"
+                  android:fitsSystemWindows="true"
+                  android:src="@drawable/toolbar_bg"
+                   />
+
+                <androidx.appcompat.widget.Toolbar
+                  android:id="@+id/toolbar"
+                  android:layout_width="match_parent"
+                  android:layout_height="?attr/actionBarSize"
+                  app:layout_collapseMode="pin"/>
+
+              </com.google.android.material.appbar.CollapsingToolbarLayout>
             </com.google.android.material.appbar.AppBarLayout>
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/scrollview"
@@ -331,11 +314,10 @@
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       style="@style/TextAppearance_Help_Dense"
-                      android:textColor="@color/light_gray"
                       app:help_text="@string/help_quickunlock"
                       app:title_text="@string/enable_quickunlock"
-			                android:text="@string/help_quickunlock"
-                      android:background="?android:attr/selectableItemBackground"/>
+			          android:text="@string/help_quickunlock"
+                      />
                   </LinearLayout>
                   <LinearLayout
                     android:id="@+id/work_offline_container"
@@ -353,11 +335,11 @@
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       style="@style/TextAppearance_Help_Dense"
-                      android:textColor="@color/light_gray"
+                      
                       app:help_text="@string/UseOfflineMode_Info"
                       app:title_text="@string/UseOfflineMode"
 			                android:text="@string/UseOfflineMode_Info"
-                      android:background="?android:attr/selectableItemBackground"/>
+                      />
                   </LinearLayout>
 
                   <Button
@@ -377,7 +359,7 @@
     </keepass2android.MeasuringRelativeLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true">
