--- a/src/keepass2android-appSdkStyle/Resources/layout/QuickUnlock.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/QuickUnlock.xml
@@ -13,7 +13,8 @@ android:fitsSystemWindows="true">
   <LinearLayout
       android:id="@+id/top"
       android:layout_width="match_parent"
-      android:layout_height="1dp"
+      android:layout_height="0dp"
+            android:background="@android:color/transparent"
       android:orientation="horizontal" />
   <RelativeLayout
               android:id="@+id/bottom_bar"
@@ -58,15 +59,13 @@ android:fitsSystemWindows="true">
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true">
+        >
       <com.google.android.material.appbar.CollapsingToolbarLayout
           android:id="@+id/collapsing_toolbar"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_scrollFlags="scroll|exitUntilCollapsed"
           android:fitsSystemWindows="true"
-          app:contentScrim="?attr/colorAccent"
           app:expandedTitleMarginStart="16dp"
           app:expandedTitleMarginEnd="24dp"
           app:expandedTitleMarginBottom="20sp">
@@ -79,7 +78,6 @@ android:fitsSystemWindows="true">
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scaleType="centerCrop"
-              android:fitsSystemWindows="true"
               android:src="@drawable/toolbar_bg_quickunlock"
               app:layout_collapseMode="parallax" />
           <TextView
@@ -91,13 +89,16 @@ android:fitsSystemWindows="true">
               android:layout_marginLeft="16dp"
               android:textSize="10sp"
               android:text="/storage/emulated/0/keepass/keepass/database.kdbx" />
+                        
+
         </RelativeLayout>
+                    
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/mytoolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_collapseMode="pin" />
+          android:id="@+id/toolbar"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize"
+          app:layout_collapseMode="pin"/>
+       
       </com.google.android.material.appbar.CollapsingToolbarLayout>
      </com.google.android.material.appbar.AppBarLayout>
     
