fix bottom bar in QuickUnlock and Password activity

--- a/src/keepass2android-appSdkStyle/Resources/layout/password.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/password.xml
@@ -6,49 +6,18 @@
     android:layout_width="match_parent"
     android:fitsSystemWindows="true">
 <!-- activity view -->
-    <keepass2android.MeasuringRelativeLayout
+    <keepass2android.MeasuringLinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/relative_layout">
-        <LinearLayout
-            android:id="@+id/top"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:orientation="horizontal" />
-        <RelativeLayout
-            android:id="@+id/bottom_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/md_theme_secondaryContainer"
-            android:layout_alignParentBottom="true"
-            android:baselineAligned="false">
-            <Button
-                android:id="@+id/change_db"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:text="@string/menu_change_db"
-                style="@style/BottomBarButton" />
-            <Button
-                android:id="@+id/pass_ok"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:text="@string/unlock_database_button"
-                style="@style/BottomBarButton" />
-        </RelativeLayout>
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_above="@id/bottom_bar"
-            android:background="#b8b8b8" />
+        android:orientation="vertical"
+        android:id="@+id/main_layout">
+
         
         <androidx.coordinatorlayout.widget.CoordinatorLayout 
                                                              android:id="@+id/main_content"
                                                              android:layout_width="match_parent"
-                                                             android:layout_height="match_parent">
+                                                             android:layout_height="match_parent"
+                                                             android:layout_weight="1">
 
           <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
@@ -356,7 +325,38 @@
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    </keepass2android.MeasuringRelativeLayout>
+   
+      <View
+        android:id="@+id/divider2"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_weight="0"
+        android:background="#b8b8b8" />
+
+        <RelativeLayout
+            android:id="@+id/bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:orientation="horizontal"            
+            >
+            <Button
+                android:id="@+id/change_db"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="@string/menu_change_db"
+                style="@style/BottomBarButton" />
+            <Button
+                android:id="@+id/pass_ok"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="@string/unlock_database_button"
+                style="@style/BottomBarButton" />
+        </RelativeLayout>
+        
+         </keepass2android.MeasuringLinearLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation"
         android:layout_width="match_parent"
