--- a/src/keepass2android-appSdkStyle/Resources/layout/QuickUnlock.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/QuickUnlock.xml
@@ -6,54 +6,17 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
 android:fitsSystemWindows="true">
-<keepass2android.MeasuringRelativeLayout
+<keepass2android.MeasuringLinearLayout
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
+  android:orientation="vertical"
   android:id="@+id/relative_layout">
-  <LinearLayout
-      android:id="@+id/top"
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-            android:background="@android:color/transparent"
-      android:orientation="horizontal" />
-  <RelativeLayout
-              android:id="@+id/bottom_bar"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal"
-              android:layout_alignParentBottom="true"
-              android:baselineAligned="false">
-    <Button
-           android:text="@string/QuickUnlock_button"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           style="@style/BottomBarButton"
-           android:layout_alignParentRight="true"
-           android:id="@+id/QuickUnlock_button"
-     />
-    <Button
-        android:text="@string/QuickUnlock_lockButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/BottomBarButton" 
-        android:id="@+id/QuickUnlock_buttonLock"
-        android:layout_alignParentLeft="true"
-         />
-    
-  </RelativeLayout>
-  <View
-        android:id="@+id/divider2"
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:layout_above="@id/bottom_bar"
-        android:background="#b8b8b8" />
-
+  
   <androidx.coordinatorlayout.widget.CoordinatorLayout
           android:id="@+id/main_content"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:layout_above="@id/divider2"
-          android:layout_below="@id/top"
+          android:layout_weight="1"
           android:fitsSystemWindows="true">
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
@@ -169,6 +132,39 @@ android:paddingRight="16dp"
     </androidx.core.widget.NestedScrollView>
 
   </androidx.coordinatorlayout.widget.CoordinatorLayout>    
+  <View
+    android:id="@+id/divider2"
+    android:layout_width="fill_parent"
+    android:layout_height="1dp"
+    android:layout_weight="0"
+    android:background="#b8b8b8" />
 
-</keepass2android.MeasuringRelativeLayout>
+  <RelativeLayout
+              android:id="@+id/bottom_bar"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_weight="0"
+              android:orientation="horizontal"
+              >
+    <Button
+           android:text="@string/QuickUnlock_button"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           style="@style/BottomBarButton"
+           android:layout_alignParentRight="true"
+           android:id="@+id/QuickUnlock_button"
+                
+     />
+    <Button
+        android:text="@string/QuickUnlock_lockButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/BottomBarButton" 
+        android:id="@+id/QuickUnlock_buttonLock"
+        android:layout_alignParentLeft="true"
+         />
+    
+  </RelativeLayout>
+ 
+</keepass2android.MeasuringLinearLayout>
 </LinearLayout>
