--- a/src/keepass2android-appSdkStyle/Resources/layout/password.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/password.xml
@@ -33,6 +33,11 @@
               app:expandedTitleMarginEnd="64dp"
               app:expandedTitleMarginStart="48dp"
               app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+              <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+                              android:layout_width="fill_parent"
+                              android:fitsSystemWindows="true"
+                              android:layout_height="fill_parent">
                 <ImageView
                   android:id="@+id/backdrop"
                   android:layout_width="match_parent"
@@ -40,7 +45,17 @@
                   android:scaleType="centerCrop"
                   android:fitsSystemWindows="true"
                   android:src="@drawable/toolbar_bg"
-                   />
+                  app:layout_collapseMode="parallax" />
+                <TextView
+                  android:id="@+id/filename"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true"
+                  android:layout_marginBottom="4sp"
+                  android:layout_marginLeft="16dp"
+                  android:textSize="10sp"
+                  android:text="/storage/emulated/0/keepass/keepass/database.kdbx" />
+              </RelativeLayout>
 
                 <androidx.appcompat.widget.Toolbar
                   android:id="@+id/toolbar"
