--- a/src/keepass2android-appSdkStyle/Resources/layout/generate_password.xml
+++ b/src/keepass2android-appSdkStyle/Resources/layout/generate_password.xml
@@ -18,7 +18,7 @@
       android:layout_height="wrap_content"
       android:layout_alignParentLeft="true"
       android:text="@android:string/cancel"
-      android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
+      android:drawableLeft="@drawable/baseline_close_24"
       style="@style/BottomBarButton" />
     <Button
       android:id="@+id/accept_button"
